# AI-Kernel-learning

./: .clangd  .gitignore  COMPLETE_LEARNING_GUIDE.md  ECOSYSTEM_OVERVIEW.md  HANDS_ON_IMPLEMENTATION_GUIDE.md  LEARNING_CHECKLIST.md  LEARNING_PATH_SUMMARY.md  README.md
Candle/: README.md
CuTE/: CMakeLists.txt  README.md
CuTE/CuTe_Tutorials/: CMakeLists.txt  README.md
CuTE/CuTe_Tutorials/01_Intro_Layout_Algebra/examples/: 01_layout_basics.cu  02_shape_and_stride.cu  03_layout_composition.cu
CuTE/CuTe_Tutorials/01_Intro_Layout_Algebra/exercises/: exercise_01.cu
CuTE/CuTe_Tutorials/01_Intro_Layout_Algebra/solutions/: exercise_01_solution.cu
CuTE/CuTe_Tutorials/02_CuTe_Tensors/examples/: 01_tensor_creation.cu  02_tensor_views.cu  03_tensor_arithmetic.cu
CuTE/CuTe_Tutorials/02_CuTe_Tensors/exercises/: exercise_02.cu
CuTE/CuTe_Tutorials/02_CuTe_Tensors/solutions/: exercise_02_solution.cu
CuTE/CuTe_Tutorials/03_Tiled_Copy/examples/: 01_copy_basics.cu  02_tiled_copy_2d.cu  03_thread_mapping.cu
CuTE/CuTe_Tutorials/03_Tiled_Copy/exercises/: exercise_03.cu
CuTE/CuTe_Tutorials/03_Tiled_Copy/solutions/: exercise_03_solution.cu
CuTE/CuTe_Tutorials/04_MMA_Atoms/examples/: 01_mma_introduction.cu  02_mma_shapes.cu  03_mma_accumulation.cu
CuTE/CuTe_Tutorials/04_MMA_Atoms/exercises/: exercise_04.cu
CuTE/CuTe_Tutorials/04_MMA_Atoms/solutions/: exercise_04_solution.cu
CuTE/CuTe_Tutorials/05_Shared_Memory/examples/: 01_shared_memory_basics.cu  02_swizzling.cu  03_bank_conflict_free.cu
CuTE/CuTe_Tutorials/05_Shared_Memory/exercises/: exercise_05.cu
CuTE/CuTe_Tutorials/05_Shared_Memory/solutions/: exercise_05_solution.cu
CuTE/CuTe_Tutorials/06_Advanced_Patterns/examples/: 01_gemm_pattern.cu  02_software_pipeline.cu
CuTE/Module_01_Layout_Algebra/: BUILD.md  CMakeLists.txt  README.md  layout_study.cu
CuTE/Module_01_Layout_Algebra/exercises/: ex01_basic_layout.cu  ex02_rowmajor_colmajor.cu  ex03_custom_strides.cu  ex04_layout_composition.cu  ex05_offset_mapping_challenge.cu  ex06_hierarchical_layouts.cu  ex08_debug_with_print.cu
CuTE/Module_01_Layouts/: README.md
CuTE/Module_01_Layouts/exercises/: ex01_basic_layouts.cu  ex02_tiling_with_logical_divide.cu  ex03_attention_tensor_layouts.cu  ex04_gqa_stride_zero.cu
CuTE/Module_02_CuTe_Tensors/: CMakeLists.txt  README.md  tensor_basics.cu
CuTE/Module_02_CuTe_Tensors/exercises/: CMakeLists.txt  README.md
CuTE/Module_02_Tensors/: README.md
CuTE/Module_02_Tensors/exercises/: ex01_tensor_creation.cu  ex02_slicing_views.cu  ex03_local_tile.cu  ex04_local_partition.cu  ex05_attention_score_kernel  ex05_attention_score_kernel.cu
CuTE/Module_03_TiledCopy/: README.md
CuTE/Module_03_TiledCopy/exercises/: ex01_basic_copy.cu  ex02_vectorized_128bit.cu  ex02_vectorized_128bit_FILL_IN.cu  ex03_gmem_to_smem.cu  ex04_async_copy_pipeline.cu
CuTE/Module_03_Tiled_Copy/: CMakeLists.txt  README.md  tiled_copy_basics.cu
CuTE/Module_03_Tiled_Copy/exercises/: CMakeLists.txt  README.md
CuTE/Module_04_MMA_Atoms/: CMakeLists.txt  README.md  mma_atom_basics.cu
CuTE/Module_04_MMA_Atoms/exercises/: CMakeLists.txt  README.md
CuTE/Module_04_TiledMMA/: README.md
CuTE/Module_04_TiledMMA/exercises/: ex01_mma_atom_setup.cu  ex02_tiled_gemm.cu  ex03_fragment_layout.cu  ex04_mixed_precision_fp16.cu
CuTE/Module_05_Shared_Memory_Swizzling/: CMakeLists.txt  README.md  shared_memory_layouts.cu
CuTE/Module_05_Shared_Memory_Swizzling/exercises/: CMakeLists.txt  README.md
CuTE/Module_05_Swizzle/: README.md
CuTE/Module_05_Swizzle/exercises/: ex01_bank_conflicts_demo.cu  ex02_apply_swizzle.cu  ex03_verify_with_nsight.cu
CuTE/Module_06_Collective_Mainloops/: CMakeLists.txt  producer_consumer_pipeline.cu
CuTE/Module_06_Collective_Mainloops/exercises/: CMakeLists.txt
CuTE/Module_06_Pipeline/: README.md
CuTE/Module_06_Pipeline/exercises/: ex01_double_buffer.cu  ex02_pipelined_gemm.cu  ex03_async_mma_overlap.cu
CuTE/Projects/: BUILD.md  CMakeLists.txt  README.md
CuTE/Projects/01_tiled_gemm/: README.md  gemm.cu
CuTE/Projects/01_vector_add/: CMakeLists.txt  README.md  vector_add.cu
CuTE/Projects/01_vector_add/solution/: vector_add_solution.cu
CuTE/Projects/02_flash_attention_prefill/: README.md  flash_attention.cu
CuTE/Projects/02_gemm/: CMakeLists.txt  README.md  gemm.cu
CuTE/Projects/02_gemm/solution/: gemm_solution.cu
CuTE/Projects/03_softmax/: CMakeLists.txt  README.md  softmax.cu
CuTE/Projects/03_softmax/solution/: softmax_solution.cu
CuTE/Projects/04_flash_attention/: CMakeLists.txt  README.md  flash_attention.cu
CuTE/Projects/04_flash_attention/solution/: flash_attention_solution.cu
CuTE/Projects/05_flashinfer/: CMakeLists.txt  README.md  flashinfer.cu
CuTE/Projects/05_flashinfer/solution/: flashinfer_solution.cu
CuTE/Projects/06_tiled_gemm_smem/: CMakeLists.txt  README.md  tiled_gemm_smem.cu
CuTE/Projects/06_tiled_gemm_smem/solution/: tiled_gemm_smem_solution.cu
CuTE/Projects/07_mma_gemm/: CMakeLists.txt  README.md  mma_gemm.cu
CuTE/Projects/07_mma_gemm/solution/: mma_gemm_solution.cu
CuTE/Projects/08_pipelined_gemm/: CMakeLists.txt  README.md  pipelined_gemm.cu
CuTE/Projects/08_pipelined_gemm/solution/: pipelined_gemm_solution.cu
CuTE/Projects/09_vectorized_copy/: CMakeLists.txt  README.md  vectorized_copy.cu
CuTE/Projects/09_vectorized_copy/solution/: vectorized_copy_solution.cu
CuTE/Projects/10_mha_kv_cache/: CMakeLists.txt  README.md  mha_kv_cache.cu
CuTE/Projects/10_mha_kv_cache/solution/: mha_kv_cache_solution.cu
CuTE/Projects/11_int8_gemm/: CMakeLists.txt  README.md  int8_gemm.cu
CuTE/Projects/11_int8_gemm/solution/: int8_gemm_solution.cu
CuTE/Projects/12_fp8_gemm/: CMakeLists.txt  README.md  fp8_gemm.cu
CuTE/Projects/12_fp8_gemm/solution/: fp8_gemm_solution.cu
CuTE/Projects/13_gemm_rope/: CMakeLists.txt  README.md  gemm_rope.cu
CuTE/Projects/13_gemm_rope/solution/: gemm_rope_solution.cu
CuTE/Projects/14_mla/: CMakeLists.txt  README.md  mla.cu
CuTE/Projects/14_mla/solution/: mla_solution.cu
Cutlass3.x/module1-Layouts and Tensors/: CMakeLists.txt  build.sh
(+346 files in other folders)
